# coding_agent_orchestrator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/using-orch/: SKILL.md
.serena/: project.yml
docs/plans/: 2026-02-01-team-of-rivals-implementation-plan.md  2026-02-01-team-of-rivals-orchestration-design.md  2026-02-03-complexity-analyzer-design.md  2026-02-03-complexity-analyzer-implementation.md  2026-02-03-subagent-model-routing-design.md  2026-02-04-complexity-prompt-injection-protection.md  PHASE-1-MVP-COMPLETION.md  team-of-rivals-explorer.html
src/orch/: __init__.py  __main__.py
src/orch/agents/: __init__.py  base.py  claude.py  codex.py  gemini.py  opencode.py  protocol.py  registry.py
src/orch/cli/: __init__.py  main.py
src/orch/config/: __init__.py  defaults.py  manager.py  schema.py
src/orch/evaluation/: __init__.py
src/orch/execution/: __init__.py  agent_delegator.py  protocol.py  router.py  subprocess_executor.py
src/orch/llm/: __init__.py  client.py
src/orch/orchestration/: __init__.py  analytics.py  checkpoint.py  complexity.py  critic_aggregator.py  models.py  router.py  team.py
src/orch/output/: formatter.py
src/orch/tmux/: __init__.py  manager.py
tests/: __init__.py  conftest.py
tests/unit/cli/: test_orchestrate_commands.py  test_session_commands.py
tests/unit/config/: __init__.py  test_schema.py
tests/unit/execution/: __init__.py  test_agent_delegator.py  test_protocol.py  test_router.py  test_subprocess_executor.py
tests/unit/llm/: test_client.py
tests/unit/orchestration/: test_analytics.py  test_checkpoint.py  test_complexity.py  test_critic_aggregator.py  test_models.py  test_team.py
(+11 files in other folders)
