[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orch"
version = "0.1.0"
description = "Universal AI Agent Orchestrator - Claude as manager, AI CLIs as workers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Manik Singhal" }
]
keywords = ["ai", "cli", "orchestrator", "gemini", "codex", "claude", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "toml>=0.10.0",
    "anyio>=4.0.0",
    "libtmux>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
orch = "orch.cli.main:cli"

[project.entry-points."orch.agents"]
gemini = "orch.agents.gemini:GeminiAgent"
codex = "orch.agents.codex:CodexAgent"

[tool.hatch.build.targets.wheel]
packages = ["src/orch"]

[tool.hatch.build.targets.sdist]
include = ["src/orch"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["orch"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
